--- a/src/app/starselect/starselect.component.html
+++ b/src/app/starselect/starselect.component.html
@@ -1,3 +1,12 @@
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <ng-content select=".heading"></ng-content>
+    </div>
+    <div class="panel-body">
+        <ng-content select=".body"></ng-content>
+    </div>
+</div>
+
 <span
     class = "glyphicon"
     [class.glyphicon-star] ="isSelected"
