--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+/* @import "https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css" */
+/* @import "~bootstrap/dist/css/bootstrap.css" */
 
