--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -8,3 +8,12 @@
     <div *ngSwitchCase="'list'">List View Content</div>
     <div *ngSwitchDefault>Otherwise</div>
 </div>
+
+<ul>
+        <button (click)="loadCourse()">Load Courses</button>
+    <button (click)="onAdd()">Add</button>
+    <li *ngFor="let course of courses; even as isEven; trackBy: trackCourse">
+        {{course.name}} <span *ngIf="isEven">  Even  </span>
+        <button (click)="onRemove(course)">Remove</button>
+    </li>
+</ul>
