--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <course></course>
 <title-case></title-case>
 <courses></courses>
+<toggle-body title="Shipping Details ">
+    Shipping Details Content
+</toggle-body>
